--- a/demo-app/src/index.html
+++ b/demo-app/src/index.html
@@ -11,5 +11,8 @@
     </div>
   </div>
   <script src="/socket.io/socket.io.js"></script>
+  <script src='js/constants.js'></script>
+  <script src='js/statshandler.js'></script>
+  <script src='js/devices.js'></script>
   <script src='js/main.js'></script>
 </html>
